<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewWish">

    <EditText
        android:id="@+id/id_editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_wish_list_title"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/id_editDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/id_editTitle"
        app:layout_constraintStart_toStartOf="@+id/id_editTitle"
        app:layout_constraintTop_toBottomOf="@+id/id_editTitle"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/id_editDate"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp" />

</androidx.constraintlayout.widget.ConstraintLayout>